# RF24UnityLink

./: README.md
Assets/: BallSkript.cs  RF24.cs  RF24Editor.cs  RF24Worker.cs  RF24WorkerEditor.cs  USBManagement (conflicted copy 2022-09-26 105118).cs  USBManagement.cs  USBManagementEditor.cs
Assets/Materials/: Blue.mat  Green.mat  Red.mat
Assets/RF24Lib/: CMakeLists.txt  UnityUSBInterface.cpp  WindowsToolchain.cmake
Assets/STLs/: Arrow.fbx  Drohne.fbx
Assets/Scenes/: SampleScene.unity
ProjectSettings/: ProjectSettings.asset
Temp/: workerlic
Temp/__Backupscenes/: 0.backup
UserSettings/Layouts/: default-2022.dwlt
